Brought code for regrade request to within rubric.js.coffee

--- a/app/views/modals/student/_dispute_2.html.haml
+++ b/app/views/modals/student/_dispute_2.html.haml
@@ -3,8 +3,7 @@
   .span2
   .span9
     %p
-      = simple_form_for :dispute, remote: true, defaults: { label: false }, 
-      html: { data: { id: 'tab-st-rc-2', action: 'dispute?id=:id' } } do |f|
+      = simple_form_for :dispute, remote: true, defaults: { label: false } do |f|
         = f.input :reason, as: :text, input_html: { rows: 5, cols: 60, class: 'span11' }, 
         hint: '( Mandatory ) Provide precise reasons for why you think the question should be regraded'
         %button.btn.btn-primary.pull-right.btn-large{ type: :submit }= 'Please regrade'
