--- a/app/assets/stylesheets/rubric.css.scss
+++ b/app/assets/stylesheets/rubric.css.scss
@@ -4,7 +4,7 @@ $lightgray: #999999 ; // rgb(153,153,153)
 $gradians-blue: #6ca7ab ; // rgb(108,167,171)
 $green: #11c214 ; // rgb(17,194,20)
 
-$red: #c40e0e;
+$red: rgba(231,21,21,0.5) ; 
 $orange: rgba(255,165,0,0.5) ; // rgb(255,165,0)
 $deep-blue: #01537d ; // rgb(1,83,125)
 
@@ -12,12 +12,22 @@ $deep-blue: #01537d ; // rgb(1,83,125)
   font-size: 11px ;
   cursor: pointer ; 
 
-  &.fdb { 
-    padding-bottom: 5px ;
-    border-bottom: 1px dotted white ;
-    margin-top: 8px ;
-    text-align: justify ;
+  &.grade { 
+    padding: { 
+      top: 0px ;
+      bottom: 3px ; 
+      left: 5px ; 
+      right: 5px ;
+    } 
+    &:nth-child(odd) { 
+      background-color: rgba(1,83,125,0.5);
+      border-radius: 2px ;
+    } 
   }
+
+  &.view { 
+    text-align: justify ;
+  } 
 
   .kb { 
      text-align: center ;
@@ -33,14 +43,15 @@ $deep-blue: #01537d ; // rgb(1,83,125)
 
   &.selected { 
     .kb { 
-      background-color: $deep-blue ; 
-      color: white ;
+      background-color: white ; 
+      border: none ;
+      color: $gray ;
     } 
   } 
 
   &:not([class~='selected']){
     .kb { 
-      background-color: $lightgray ; 
+      background-color: $lightgray ;
     } 
   }
 
@@ -50,8 +61,9 @@ $deep-blue: #01537d ; // rgb(1,83,125)
     width: 90% ;
     margin-top: 6px ;
     border-radius: 1px ;
-    > .reward {
-      background-color: rgba(1,83,125,0.7) ;
+    > .reward, > .penalty {
+      // background-color: rgba(1,83,125,0.7) ;
+      background-color: rgba(6,145,8,0.7) ;
       height: 100% ;
       &.red { background-color: $red ; }
       &.orange { background-color: rgba(255,165,0,0.9) ; }
