minor styling changes

--- a/app/assets/stylesheets/rubric.css.scss
+++ b/app/assets/stylesheets/rubric.css.scss
@@ -46,6 +46,7 @@ $deep-blue: #01537d ; // rgb(1,83,125)
       background-color: white ; 
       border: none ;
       color: $gray ;
+      border-radius: 3px ;
     } 
   } 
 
