Number the TeX comments as they are rendered ...
The numbering would let the student / teacher know in what order
the comments are to be read. Right now, they have only spatial
relationship to go by

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -15,6 +15,20 @@ $green: #347235 ; // rgb(87,188,32)
 $deep-blue: #01537d ; // rgb(1,83,125)
 $lightblue: lighten($deep-blue, 23%) ; // rgb(56,188,255) 
 
+div { 
+  &.tex-index { 
+    width: 20px ;
+    text-align: center ;
+    font-weight: 500 ; 
+    color: white ;
+    background-color: rgba(1,83,125,0.7) ; 
+    padding: 2px 5px ;
+    border-radius: 5px ;
+    float: left ;
+    cursor: pointer ;
+  } 
+} 
+
 ul {
   > li {
     > .footnote { 
