--- a/app/assets/stylesheets/rubric.css.scss
+++ b/app/assets/stylesheets/rubric.css.scss
@@ -27,15 +27,15 @@ $deep-blue: #01537d ; // rgb(1,83,125)
 
   &.view { 
     max-width: 95% ;
-    font-size: 10.5px ;
+    font-size: 11px ;
     padding: { 
       bottom: 4px; 
       left: 4px ;
       top: 4px ;
       right: 4px ;
     } 
-    border-radius: 5px ;
-    &:not([class~='hidden']):nth-child(even) {
+    border-radius: 2px ;
+    &.highlight {
       background-color: rgba(1,83,125,0.5);
     }
   } 
@@ -69,8 +69,8 @@ $deep-blue: #01537d ; // rgb(1,83,125)
 
   div:not([class]) {
     background-color: $lightgray ;
-    height: 4px ;
-    width: 90% ;
+    height: 10px ;
+    //width: 90% ;
     margin-top: 6px ;
     border-radius: 1px ;
     > .reward, > .penalty {
