Minor edit to view-feedback panel ...
Last tab given an icon instead of text

--- a/app/views/teachers/uni/_rc.html.haml
+++ b/app/views/teachers/uni/_rc.html.haml
@@ -8,7 +8,7 @@
     = simple_link for: "Overall", href: '#pane-tc-rc-2', 
       id: 'tab-tc-rc-2', class: 'nopurge-on-inactive' 
   %li
-    = simple_link for: "Specific", href: '#pane-tc-rc-3', id: 'tab-tc-rc-3'
+    = simple_link icon: 'icon-search', href: '#pane-tc-rc-3', id: 'tab-tc-rc-3'
 
 .tab-content
   #pane-tc-rc-1.tab-pane.scroll.reissue-ajax
