Initial commit of new feature to show item-count within a horizontal tab
Depending on the context, we can now a show a number that lets
the user know how many of the relevant items there are.

The context could be
   1. how many quizzes are there in a student's inbox / outbox
   2. how many exams a grader still needs to grade etc. etc.

** Periodic updates ** has not been implemented. It can be, but:
  1. it will be a bit complicated - requiring regular pings to the server
  2. possibly unnecessary given that few item counts will change dramatically
     over a typical session. Our system is not like Gmail where many post
     to one account. Most of our data is slow changing

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1488,3 +1488,16 @@ table {
   }
 }
 
+span { 
+  &.ping { 
+    font: { 
+      size: 8px ;
+    } 
+    padding: 2px 4px ; 
+    border-radius: 5px ;
+    // background: darken($deep-blue, 10%) ; 
+    background: white ;
+    color: $gray ; 
+  } 
+} 
+
