--- a/app/views/mailbot/reject_dispute.html.haml
+++ b/app/views/mailbot/reject_dispute.html.haml
@@ -1,4 +1,4 @@
 
 %p
-  <b>#{@exm} says</b>
+  <b>#{@exm}</b> graded this question. Below is his/her <b>reason for rejecting</b> the dispute:
 %p= @reason
