--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -606,12 +606,19 @@ span.btn-shortcut {
 }
 
 .line {
-  padding: {
-    top: 3px ;
-    bottom: 2px ;
+
+  &:not([class~=kompact]) { 
+    padding: {
+      top: 3px ;
+      bottom: 2px ;
+    } 
+    min-height: 26px ;
+    font-size: 11.5px ; 
   } 
-  min-height: 26px ;
-  font-size: 11.5px ; 
+  &.kompact { 
+    font-size: 10px ;
+    padding: 0px ;
+  } 
   cursor: pointer ; 
   border-bottom: 1px solid $lightgray ; 
 
