--- a/app/views/teachers/uni/_edit-sektion.html.haml
+++ b/app/views/teachers/uni/_edit-sektion.html.haml
@@ -3,7 +3,9 @@
   = simple_form_for :remove, remote: true,
   html: { data: { action: "#{update_sektion_path}?id=:id", id: 'tab-mng-sektions-1' } } do |f|
     .row-fluid
-      %button.btn.btn-primary.btn-large.offset4{ type: :submit }= "Remove Selected"
+      %button.btn.btn-primary{ type: :submit, id: 'btn-unenroll' }= "Remove Selected"
+      - if current_account.mimics_admin
+        %button.btn.btn-primary.btn-inverse{ type: :submit, id: 'btn-add-phone' }= "Add Phone #s"
     .row-fluid.push-down
       .column.span4.purge-blind.multi-select
       .column.span4.purge-blind.multi-select
