--- a/app/views/modals/teacher/uni/_phones.html.haml
+++ b/app/views/modals/teacher/uni/_phones.html.haml
@@ -3,7 +3,7 @@
   .row-fluid
     .span1
     .span10
-      = simple_form_for :contact, remote: true, 
+      = simple_form_for :contact, remote: true, url: update_phones_path,
       defaults: { label: false }, html: { id: 'fm-phone' } do |f|
         .row-fluid
           .column.span6
