Not loading sublimevideo.js. Solution videos not a top priority for now

--- a/app/views/layouts/guardians.html.haml
+++ b/app/views/layouts/guardians.html.haml
@@ -29,7 +29,7 @@
 %html{html_attrs}
   %head 
     = javascript_include_tag "application", "guardians", "welcome"
-    %script{ type: 'text/javascript', src: '//cdn.sublimevideo.net/js/2fya70le.js' }
+    -#%script{ type: 'text/javascript', src: '//cdn.sublimevideo.net/js/2fya70le.js' }
     %script{ :type => "text/x-mathjax-config" } 
       MathJax.Hub.Config({
       "HTML-CSS" : {
