--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -81,7 +81,7 @@
 %html{html_attrs}
   %head 
     = javascript_include_tag "application", (t.indie ? 'indie' : 'uni')
-    %script{ type: 'text/javascript', src: '//cdn.sublimevideo.net/js/2fya70le.js' }
+    -#%script{ type: 'text/javascript', src: '//cdn.sublimevideo.net/js/2fya70le.js' }
     %script{ type: "text/x-mathjax-config" } 
       MathJax.Hub.Register.StartupHook("HTML-CSS Jax Ready", function() {
       var VARIANT = MathJax.OutputJax["HTML-CSS"].FONTDATA.VARIANT ;
